--- a/index.html
+++ b/index.html
@@ -4,9 +4,71 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>  
+    <link rel="stylesheet" href="styles/global.css">
+    <link rel="stylesheet" href="fonts/fonts.css">
+    <link rel="stylesheet" href="styles/style.css"/>
   </head>
   <body>
-    вуаfewfwe
+    <header class="header">
+      <nav class="header menu"></nav>
+      <a href="" class="header logo"></a>
+      <address class="headercontacts"></address>
+    </header>
+    <main>
+      <section class="cover">
+        <h1 class="title"></h1>
+        <div class="description">
+          <p class="subline"></p>
+          <button class="button"></button>
+        </div>
+      </section>
+      <section class="lots">
+        <h2 class="title"></h2>
+        <ul>
+          <li class="Frame 1">
+            <a href="">
+              <article>
+              </article>
+            </a>
+          </li>
+          <li class="Frame 2">
+            <a href="">
+              <article>
+              </article>
+            </a>
+          </li>
+          <li class="Frame 3">
+            <a href="">
+              <article>
+              </article>
+            </a>
+          </li>
+        </ul>
+        <a href="" class="more"></a>
+      </section>
+      <section class="about">
+        <div class="logo-column"></div>
+        <div class="about-column">
+          <h2>Об аукционе</h2>
+          <p class="description-block">
+            Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. 
+          </p>
+          <p>
+            Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
+          </p>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="contacts"></div>
+      <div class="menu"></div>
+      <div class="socials">
+        <a href=""></a>
+        <a href=""></a>
+        <a href=""></a>
+      </div>
+    </footer>
   </body>
 </html>
