--- a/index.html
+++ b/index.html
@@ -11,44 +11,70 @@
   </head>
   <body>
     <header class="header">
-      <nav class="header menu"></nav>
-      <a href="" class="header logo"></a>
-      <address class="headercontacts"></address>
+      <nav class="header menu">
+        <p>главная</p>
+        <p>посмотреть лоты</p>
+        <p>об аукционе</p>
+      </nav>
+      <img class="header logo" src="images/logo-black.svg" alt="оно тебе надо">
+      <address class="header contacts">
+        <p>+9 999 555 5555</p>
+        <p>info@sobaka.ge</p>
+        <p>наб. Принсенграхт 263- 265, Амстердам</p>
+      </address>
     </header>
     <main>
       <section class="cover">
-        <h1 class="title"></h1>
+        <h1 class="title">
+          <p>ОНО</p>
+          <p>ТЕБЕ</p>
+          <p>НАДО</p>
+        </h1>
         <div class="description">
-          <p class="subline"></p>
-          <button class="button"></button>
+          <p class="subline">
+            Аукцион вещей, вкоторые никто не верил
+          </p>
+          <button class="button">
+            Сделать ставку
+          </button>
         </div>
       </section>
       <section class="lots">
-        <h2 class="title"></h2>
+        <h2>
+          Лоты
+        </h2>
         <ul>
-          <li class="Frame 1">
+          <li class="frame-1">
             <a href="">
-              <article>
+              <article class="lot-1">
+                <p>Фильм режиссёра, который бросил киношколу</p>
+                <p>Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
               </article>
             </a>
           </li>
-          <li class="Frame 2">
+          <li class="frame-2">
             <a href="">
-              <article>
+              <article class="lot-2">
+                <p>Книга, где описан один скучный день из жизни рекламного агента</p>
+                <p>Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
               </article>
             </a>
           </li>
-          <li class="Frame 3">
+          <li class="frame-3">
             <a href="">
-              <article>
+              <article class="lot-3">
+                <p>Картина, которую повторит даже 5-летний сын маминой подруги</p>
+                <p>Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
               </article>
             </a>
           </li>
         </ul>
-        <a href="" class="more"></a>
+        <a href="" class="more">посмотреть больше</a>
       </section>
       <section class="about">
-        <div class="logo-column"></div>
+        <div class="logo-column">
+          <img src="images/logo-white.svg" alt="оно тебе надо">
+        </div>
         <div class="about-column">
           <h2>Об аукционе</h2>
           <p class="description-block">
@@ -62,12 +88,26 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="contacts"></div>
-      <div class="menu"></div>
+      <div class="contacts">
+        <p>+9 999 555 5555</p>
+        <p><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></p>
+        <p>наб. Принсенграхт 263-265,<br>Амстердам</p>
+      </div>
+      <div class="menu">
+        <a href="#">главная</a><br>
+        <a href="#">посмотреть лоты</a><br>
+        <a href="#">об аукционе</a>
+      </div>
       <div class="socials">
-        <a href=""></a>
-        <a href=""></a>
-        <a href=""></a>
+        <a href="">
+          <img src="images/yt.svg" alt="ютуб">
+        </a>
+        <a href="">
+          <img src="images/vk.svg" alt="вк">
+        </a>
+        <a href="">
+          <img src="images/pinterest.svg" alt="пинтерест">
+        </a>
       </div>
     </footer>
   </body>
