--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
       </nav>
       <img class="header logo" src="images/logo-black.svg" alt="оно тебе надо">
       <address class="header contacts">
-        <p>+9 999 555 5555</p>
-        <p>info@sobaka.ge</p>
-        <p>наб. Принсенграхт 263- 265, Амстердам</p>
+        <p>+9 999 555 5555<br> info@sobaka.ge наб.<br> Принсенграхт 263-<br> 265, Амстердам</p>
       </address>
     </header>
     <main>
