доделана шапка по grid

--- a/index.html
+++ b/index.html
@@ -11,15 +11,19 @@
   </head>
   <body>
     <header class="header">
-      <nav class="header menu">
+      <div class="header menu">
         <p>главная</p>
         <p>посмотреть лоты</p>
         <p>об аукционе</p>
-      </nav>
-      <img class="header logo" src="images/logo-black.svg" alt="оно тебе надо">
-      <address class="header contacts">
-        <p>+9 999 555 5555<br> info@sobaka.ge наб.<br> Принсенграхт 263-<br> 265, Амстердам</p>
-      </address>
+      </div>
+      <div>
+        <img class="header logo" src="images/logo-black.svg" alt="оно тебе надо">
+      </div>
+      <div class="header contacts">
+        <p>+9 999 555 5555</p>
+        <p>info@sobaka.ge наб.</p>
+        <p>Принсенграхт 263-<br> 265, Амстердам</p>
+      </div>
     </header>
     <main>
       <section class="cover">
