почти доделанный хедер

--- a/index.html
+++ b/index.html
@@ -11,19 +11,23 @@
   </head>
   <body>
     <header class="header">
-      <div class="header menu">
+      <ul class="header menu">
         <p>главная</p>
-        <p>посмотреть лоты</p>
-        <p>об аукционе</p>
-      </div>
-      <div>
-        <img class="header logo" src="images/logo-black.svg" alt="оно тебе надо">
-      </div>
-      <div class="header contacts">
-        <p>+9 999 555 5555</p>
-        <p>info@sobaka.ge наб.</p>
-        <p>Принсенграхт 263-<br> 265, Амстердам</p>
-      </div>
+        <li>
+          <p>посмотреть лоты</p>
+        </li>
+        <li>
+          <p>об аукционе</p>
+        </li>
+      </ul>
+      <a class="logo" href="#">
+        <img src="images/logo-black.svg" alt="оно тебе надо">
+      </a>
+      <address class="header contacts">
+        <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
+        <a href="info@sobaka.ge">info@sobaka.ge</a>
+        <p>наб.   Принсенграхт 263-<br> 265, Амстердам</p>
+      </address>
     </header>
     <main>
       <section class="cover">
@@ -95,7 +99,7 @@
         <p><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></p>
         <p>наб. Принсенграхт 263-265,<br>Амстердам</p>
       </div>
-      <div class="menu">
+      <div>
         <a href="#">главная</a><br>
         <a href="#">посмотреть лоты</a><br>
         <a href="#">об аукционе</a>
