--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <link rel="stylesheet" href="./fonts/fonts.css" />
-    <link rel="stylesheet" href="./styles/global.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./fonts/fonts.css"/>
+    <link rel="stylesheet" href="./styles/global.css"/>
+    <link rel="stylesheet" href="./styles/style.css"/>
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
   <body>
@@ -22,19 +22,19 @@
         </ul>
       </nav>
       <a>
-        <img class="header_logo" src="./images/logo-black.svg" alt="image" />
+        <img class="header_logo" src="./images/logo-black.svg" alt="image"/>
       </a>
       <address>
         <ul class="address">
           <li>
-            <!--удалил класс и сделал общий для стилизации -->
-            <a href="tel.+99995555555">+9 999 555 5555</a>
+            <a href="tel.+99995555555" class="address_numbers"
+              >+9 999 555 5555</a
+            >
           </li>
           <li>
             <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
           </li>
-          <li>
-            <!-- удалил класс -->
+          <li class="street_address">
             наб. Принсенграхт 263-<br />
             265, Амстердам
           </li>
@@ -44,81 +44,64 @@
     <main>
       <section class="cover">
         <div class="overlay"></div>
-        <h1 class="cover_title">
-          <!-- изменен заголовок -->
-          <span class="text_cover">
-            О<span class="letter_spacing">НО</span>
-          </span>
+        <div class="cover_title">
+          <span class="text_cover"> о<span class="spacing">нo</span> </span>
           <span class="text_cover text_center">
-            ТЕ<span class="letter_spacing">БЕ</span>
+            те<span class="spacing">бе</span>
           </span>
           <span class="text_cover text_right">
-            <span class="letter_spacing">Н</span>AД<span
-              class="no_letter_spacing"
-              >О</span
-            >
+            <span class="no_spacing">н</span>адо
           </span>
-        </h1>
+        </div>
         <div class="cover_description">
-          <p class="cover_text">Аукцион вещей, в которые никто не верил</p>
+          <div class="cover_text">Аукцион вещей, в которые никто не верил</div>
           <button class="button">СДЕЛАТЬ СТАВКУ</button>
         </div>
       </section>
       <section class="lots">
-        <h2 class="title_lots">Лоты</h2>
-        <!-- изменен заголовок-->
+        <div class="title_lots">Лоты</div>
         <div class="container_lots">
           <div class="card_lots">
-            <a href="#0">
-              <article class="card card_about_cinema">
-                <div class="overlay"></div>
-                <h3 class="card_title">
-                  Фильм режиссёра, который бросил киношколу
-                </h3>
-                <p class="text_on_card link_lots">
-                  <!-- добавлен параграф-->
-                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
-                  ставка, если бы вы не знали, что режиссёр — Пол Томас
-                  Андерсон?
-                </p>
-              </article>
-            </a>
+            <article class="card card_1">
+              <div class="overlay"></div>
+              <div class="card_title">
+                Фильм режиссёра, который бросил киношколу
+              </div>
+              <div class="text_on_card">
+                Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
+              </div>
+            </article>
           </div>
           <div class="card_lots">
-            <a href="#0"
-              ><article class="card card_about_book">
-                <div class="overlay"></div>
-                <h3 class="card_title">
-                  Книга, где описан один скучный день из жизни рекламного агента
-                </h3>
-                <p class="text_on_card">
-                  <!-- добавлен параграф-->
-                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
-                  с переходами на древнеанглийский. В ней одновременно
-                  рассказывается о 16 июня 1904 года и об истории литературы,
-                  начиная с античных времён. И это всё накладывается на
-                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
-                  Джеймса Джойса?
-                </p>
-              </article>
-            </a>
+            <article class="card card_2">
+              <div class="overlay"></div>
+              <div class="card_title">
+                Книга, где описан один скучный день из жизни рекламного агента
+              </div>
+              <div class="text_on_card">
+                Объёмом почти в тысячу страниц. Иногда без  знаков препинания и с 
+                переходами на  древнеанглийский. В ней одновременно
+                рассказывается о 16 июня 1904 года и об истории  литературы,
+                начиная с  античных времён. И это  всё накладывается на  эпическую
+                поэму Гомера. Сколько бы вы поставили  на «Улисса» Джеймса 
+                Джойса?
+              </div>
+            </article>
           </div>
           <div class="card_lots">
-            <a href="#0" 
-              ><article class="card card_about_picture">
-                <div class="overlay"></div>
-                <h3 class="card_title">
-                  Картина, которую повторит даже 5-летний сын маминой подруги
-                </h3>
-                <p class="text_on_card link_lots">
-                  <!-- добавлен параграф-->
-                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
-                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
-                  котиков... Сколько бы вы на такое поставили, если бы не знали,
-                  что это — одна из революционных работ Кандинского?
-                </p>
-              </article>
-            </a>
+            <article class="card card_3">
+              <div class="overlay"></div>
+              <div class="card_title">
+                Картина, которую повторит даже 5-летний сын маминой подруги
+              </div>
+              <div class="text_on_card">
+                Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                котиков... Сколько бы вы на такое поставили, если бы не знали,
+                что это — одна из революционных работ Кандинского?
+              </div>
+            </article>
           </div>
         </div>
         <a href="#0" class="view_more">посмотреть больше</a>
@@ -126,17 +109,12 @@
       <section class="about">
         <div class="about_container">
           <div class="about_logo">
-            <img
-              src="./images/logo-white.svg"
-              alt="image"
-              class="about_logo_image"
-            />
+            <img src="./images/logo-white.svg" alt="image" class="about_logo_image"/>
           </div>
           <div class="about_content">
-            <h2 class="title_about">ОБ АУКЦИОНЕ</h2>
+            <div class="title_about">ОБ АУКЦИОНЕ</div>
             <div class="about_text">
-              <p class="text_up">
-                <!-- добавлен параграф-->
+              <div class="text_1_about">
                 Здесь вы не встретите очередное пафосное cобрание невероятно<br />
                 дорогого антиквариата. Наши лоты вообще не должны были
                 попастьни<br />
@@ -145,9 +123,8 @@
                 или картина, которую может нарисовать даже ребёнок? Кому
                 нужны<br />
                 все эти странные вещи, созданные любителями?
-              </p>
-              <p class="text_down">
-                <!-- добавлен параграф-->
+              </div>
+              <div class="text_2_about">
                 Слишком сложные или, наоборот, слишком простые. Опережающие
                 <br />своё время. В пух и прах растерзанные критиками.
                 Непринятые и<br />
@@ -159,7 +136,7 @@
                 вещи не верил никто, продолжали верить их создатели. И сейчас
                 <br />
                 эти лоты стали культовыми.
-              </p>
+              </div>
             </div>
           </div>
         </div>
@@ -196,21 +173,17 @@
       <div class="footer_images">
         <div>
           <a href="#0">
-            <img src="./images/yt.svg" alt="image" class="images_footer" />
+            <img src="./images/yt.svg" alt="image" class="images_footer"/>
           </a>
         </div>
         <div>
           <a href="#0">
-            <img src="./images/vk.svg" alt="image" class="images_footer" />
+            <img src="./images/vk.svg" alt="image" class="images_footer"/>
           </a>
         </div>
         <div>
           <a href="#0">
-            <img
-              src="./images/pinterest.svg"
-              alt="image"
-              class="images_footer"
-            />
+            <img src="./images/pinterest.svg" alt="image" class="images_footer"/>
           </a>
         </div>
       </div>
