--- a/index.html
+++ b/index.html
@@ -1,170 +1,153 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <link rel="stylesheet" href="./fonts/fonts.css" />
-    <link rel="stylesheet" href="./styles/global.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./fonts/fonts.css"/>
+    <link rel="stylesheet" href="./styles/global.css"/>
+    <link rel="stylesheet" href="./styles/style.css"/>
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
   <body>
     <header class="header">
-      <nav class="nav-bar">
-        <ul class="nav-list">
-          <li class="nav-item nav-item--active">
-            <a class="nav-link nav-link--main" href="#0">главная</a>
+      <nav class="nav-spirit">
+        <ul class="dream-links">
+          <li class="dream-item moon-marker">
+            <a class="dream-main" href="#0">главная</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#0">посмотреть лоты</a>
+          <li class="dream-item">
+            <a href="#0">посмотреть лоты</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#0">об аукционе</a>
+          <li class="dream-item">
+            <a href="#0">об аукционе</a>
           </li>
         </ul>
       </nav>
-      <a class="logo-link">
-        <img class="logo" src="./images/logo-black.svg" alt="логотип"/>
+      <a>
+        <img class="brand-symbol" src="./images/logo-black.svg" alt="image"/>
       </a>
       <address>
-        <ul class="contact-list">
+        <ul class="contact-soul">
           <li>
-            <a href="tel:+99995555555" class="contact-phone">+9 999 555 5555</a>
+            <a href="tel.+99995555555" class="contact-call">+9 999 555 5555</a>
           </li>
           <li>
-            <a href="mailto:info@sobaka.ge" class="contact-email">info@sobaka.ge</a>
+            <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
           </li>
-          <li class="contact-address">
-            наб. Принсенграхт 263-<br/>
-            265, Амстердам
+          <li class="place-echo">
+            наб. Принсенграхт 263-<br />265, Амстердам
           </li>
         </ul>
       </address>
     </header>
-    <main>
-      <section class="hero-section">
-        <div class="hero-overlay"></div>
-        <div class="hero-title">
-          <span class="hero-word"> о<span class="hero-space">нo</span> </span>
-          <span class="hero-word hero-word--center">
-            те<span class="hero-space">бе</span>
-          </span>
-          <span class="hero-word hero-word--right">
-            <span class="hero-nospace">н</span>адо
-          </span>
-        </div>
-        <div class="hero-description">
-          <div class="hero-subtitle">Аукцион вещей, в которые никто не верил</div>
-          <button class="hero-button">СДЕЛАТЬ СТАВКУ</button>
-        </div>
-      </section>
-      <section class="gallery-section">
-        <h2 class="gallery-title">Лоты</h2>
-        <div class="gallery-grid">
-          <article class="gallery-card gallery-card--film">
-            <div class="card-overlay"></div>
-            <h3 class="card-heading">
-              Фильм режиссёра, который бросил киношколу
-            </h3>
-            <p class="card-description">
-              Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
-              ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
-            </p>
-          </article>
-          <article class="gallery-card gallery-card--book">
-            <div class="card-overlay"></div>
-            <h3 class="card-heading">
-              Книга, где описан один скучный день из жизни рекламного агента
-            </h3>
-            <p class="card-description">
-              Объёмом почти в тысячу страниц. Иногда без знаков препинания и с
-              переходами на древнеанглийский. В ней одновременно рассказывается
-              о 16 июня 1904 года и об истории литературы, начиная с античных
-              времён. И это всё накладывается на эпическую поэму Гомера. Сколько
-              бы вы поставили на «Улисса» Джеймса Джойса?
-            </p>
-          </article>
 
-          <article class="gallery-card gallery-card--painting">
-            <div class="card-overlay"></div>
-            <h3 class="card-heading">
-              Картина, которую повторит даже 5-летний сын маминой подруги
-            </h3>
-            <p class="card-description">
-              Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то
-              похожее на инфузорию-туфельку. Никаких полей, лесов, котиков...
-              Сколько бы вы на такое поставили, если бы не знали, что это — одна
-              из революционных работ Кандинского?
-            </p>
-          </article>
+    <main>
+      <section class="dream-hero">
+        <div class="veil-shadow"></div>
+        <div class="hero-chant">
+          <span class="hero-word"> о<span class="soul-space">нo</span> </span>
+          <span class="hero-word word-center">
+            те<span class="soul-space">бе</span>
+          </span>
+          <span class="hero-word word-right">
+            <span class="no-space">н</span>адо
+          </span>
         </div>
-        <a href="#0" class="gallery-more">посмотреть больше</a>
+        <div class="hero-vision">
+          <div class="vision-text">Аукцион вещей, в которые никто не верил</div>
+          <button class="wish-button">СДЕЛАТЬ СТАВКУ</button>
+        </div>
       </section>
-      <section class="about-section">
-        <div class="about-wrapper">
-          <div class="about-logo">
-            <img
-              src="./images/logo-white.svg"
-              alt="логотип"
-              class="about-logo-img"
-            />
+
+      <section class="faith-gallery">
+        <div class="gallery-title">Лоты</div>
+        <div class="lot-field">
+          <div class="lot-card">
+            <article class="story-card dream-one">
+              <div class="veil-shadow"></div>
+              <div class="story-title">
+                Фильм режиссёра, который бросил киношколу
+              </div>
+              <div class="story-text">
+                Не просто бросил, а ушёл с первой лекции...
+              </div>
+            </article>
           </div>
-          <div class="about-content">
-            <h2 class="about-title">об аукционе</h2>
-            <div class="about-text">
-              <p class="about-paragraph">
-                Здесь вы не встретите очередное пафосное собрание невероятно<br />
-                дорогого антиквариата. Наши лоты вообще не должны были попасть
-                ни<br />
-                на один аукцион. Потому что кому нужен дневник
-                девочки-подростка<br/>
-                или картина, которую может нарисовать даже ребёнок? Кому нужны<br />
-                все эти странные вещи, созданные любителями?
-              </p>
-              <p class="about-paragraph">
-                Слишком сложные или, наоборот, слишком простые. Опережающие<br />
-                своё время. В пух и прах растерзанные критиками. Непринятые и<br />
-                непонятые. Когда-то они казались просто неудачными. Но, несмотря<br />
-                на критику, кажущуюся простоту или сложность, сейчас без этих<br />
-                лотов невозможно представить современную культуру. Когда в эти<br />
-                вещи не верил никто, продолжали верить их создатели. И сейчас<br />
-                эти лоты стали культовыми.
-              </p>
+          <div class="lot-card">
+            <article class="story-card dream-two">
+              <div class="veil-shadow"></div>
+              <div class="story-title">
+                Книга, где описан один скучный день из жизни рекламного агента
+              </div>
+              <div class="story-text">
+                Объёмом почти в тысячу страниц...
+              </div>
+            </article>
+          </div>
+          <div class="lot-card">
+            <article class="story-card dream-three">
+              <div class="veil-shadow"></div>
+              <div class="story-title">
+                Картина, которую повторит даже 5-летний сын маминой подруги
+              </div>
+              <div class="story-text">
+                Ну действительно, там линия, тут кружочек...
+              </div>
+            </article>
+          </div>
+        </div>
+        <a href="#0" class="more-dreams">посмотреть больше</a>
+      </section>
+
+      <section class="story-about">
+        <div class="about-realm">
+          <div class="about-symbol">
+            <img src="./images/logo-white.svg" alt="image" class="symbol-mark"/>
+          </div>
+          <div class="about-essence">
+            <div class="about-title">ОБ АУКЦИОНЕ</div>
+            <div class="about-texts">
+              <div class="text-part-one">
+                Здесь вы не встретите очередное пафосное собрание...
+              </div>
+              <div class="text-part-two">
+                Слишком сложные или, наоборот, слишком простые...
+              </div>
             </div>
           </div>
         </div>
       </section>
     </main>
-    <footer class="site-footer">
+
+    <footer class="legend-footer">
       <address>
-        <ul class="contact-list contact-list--footer">
+        <ul class="contact-soul footer-soul">
           <li>
-            <a href="tel:+99995555555" class="contact-phone">+9 999 555 5555</a>
+            <a href="tel.+99995555555">+9 999 555 5555</a>
           </li>
           <li>
-            <a href="mailto:info@sobaka.ge" class="contact-email">info@sobaka.ge</a>
+            <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
           </li>
-          <li class="contact-address">
-            наб. Принсенграхт 263-<br />
-            265, Амстердам
+          <li class="place-echo">
+            наб. Принсенграхт 263-<br />265, Амстердам
           </li>
         </ul>
       </address>
-      <nav class="footer-nav">
-        <ul class="footer-nav-list">
-          <li class="footer-nav-item">
-            <a href="#" class="footer-link footer-link--main">главная</a>
+      <nav class="footer-path">
+        <ul class="footer-links">
+          <li class="link-spirit">
+            <a href="#" class="link-spirit main-path"> главная </a>
           </li>
-          <li class="footer-nav-item">
-            <a href="#" class="footer-link">посмотреть лоты</a>
+          <li class="link-spirit">
+            <a href="#" class="link-spirit"> посмотреть лоты </a>
           </li>
-          <li class="footer-nav-item">
-            <a href="#" class="footer-link">об аукционе</a>
+          <li class="link-spirit">
+            <a href="#" class="link-spirit"> об аукционе </a>
           </li>
         </ul>
       </nav>
-      <div class="social-links">
-        <a href="#0"><img src="./images/yt.svg" alt="YouTube" class="social-icon" /></a>
-        <a href="#0"><img src="./images/vk.svg" alt="VK" class="social-icon" /></a>
-        <a href="#0"><img src="./images/pinterest.svg" alt="Pinterest" class="social-icon" /></a>
+      <div class="footer-icons">
+        <div><a href="#0"><img src="./images/yt.svg" alt="yt" class="icon-mark"/></a></div>
+        <div><a href="#0"><img src="./images/vk.svg" alt="vk" class="icon-mark"/></a></div>
+        <div><a href="#0"><img src="./images/pinterest.svg" alt="pt" class="icon-mark"/></a></div>
       </div>
     </footer>
   </body>
