--- a/index.html
+++ b/index.html
@@ -7,27 +7,27 @@
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
   <body>
-    <header class="header">
-      <nav class="nav-spirit">
+    <header class="magic-header">
+      <nav class="nav-bar">
         <ul class="dream-links">
           <li class="dream-item moon-marker">
-            <a class="dream-main" href="#0">главная</a>
+            <a class="link-path main-path" href="#0">главная</a>
           </li>
           <li class="dream-item">
-            <a href="#0">посмотреть лоты</a>
+            <a class="link-path" href="#0">посмотреть лоты</a>
           </li>
           <li class="dream-item">
-            <a href="#0">об аукционе</a>
+            <a class="link-path" href="#0">об аукционе</a>
           </li>
         </ul>
       </nav>
       <a>
-        <img class="brand-symbol" src="./images/logo-black.svg" alt="image"/>
+        <img class="brand-symbol" src="./images/logo-black.svg" alt="logo"/>
       </a>
       <address>
         <ul class="contact-soul">
           <li>
-            <a href="tel.+99995555555" class="contact-call">+9 999 555 5555</a>
+            <a href="tel:+99995555555" class="contact-call">+9 999 555 5555</a>
           </li>
           <li>
             <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
@@ -39,115 +39,75 @@
       </address>
     </header>
 
-    <main>
-      <section class="dream-hero">
-        <div class="veil-shadow"></div>
-        <div class="hero-chant">
-          <span class="hero-word"> о<span class="soul-space">нo</span> </span>
-          <span class="hero-word word-center">
-            те<span class="soul-space">бе</span>
-          </span>
-          <span class="hero-word word-right">
-            <span class="no-space">н</span>адо
-          </span>
-        </div>
-        <div class="hero-vision">
-          <div class="vision-text">Аукцион вещей, в которые никто не верил</div>
-          <button class="wish-button">СДЕЛАТЬ СТАВКУ</button>
-        </div>
-      </section>
+    <section class="dream-hero">
+      <div class="veil-shadow"></div>
+      <div class="hero-chant">
+        <span class="hero-word">о<span class="hero-space">нo</span></span>
+        <span class="hero-word word-center">те<span class="hero-space">бе</span></span>
+        <span class="hero-word word-right"><span class="letter-no-space">н</span>адо</span>
+      </div>
+      <div class="hero-vision">
+        <div class="vision-text">Аукцион вещей, в которые никто не верил</div>
+        <button class="wish-button">СДЕЛАТЬ СТАВКУ</button>
+      </div>
+    </section>
 
-      <section class="faith-gallery">
-        <div class="gallery-title">Лоты</div>
-        <div class="lot-field">
-          <div class="lot-card">
-            <article class="story-card dream-one">
-              <div class="veil-shadow"></div>
-              <div class="story-title">
-                Фильм режиссёра, который бросил киношколу
-              </div>
-              <div class="story-text">
-                Не просто бросил, а ушёл с первой лекции...
-              </div>
-            </article>
-          </div>
-          <div class="lot-card">
-            <article class="story-card dream-two">
-              <div class="veil-shadow"></div>
-              <div class="story-title">
-                Книга, где описан один скучный день из жизни рекламного агента
-              </div>
-              <div class="story-text">
-                Объёмом почти в тысячу страниц...
-              </div>
-            </article>
-          </div>
-          <div class="lot-card">
-            <article class="story-card dream-three">
-              <div class="veil-shadow"></div>
-              <div class="story-title">
-                Картина, которую повторит даже 5-летний сын маминой подруги
-              </div>
-              <div class="story-text">
-                Ну действительно, там линия, тут кружочек...
-              </div>
-            </article>
+    <section class="gallery-section">
+      <div class="gallery-title">Лоты</div>
+      <div class="lot-field">
+        <article class="story-card dream-one">
+          <div class="veil-shadow"></div>
+          <div class="story-title">Фильм режиссёра, который бросил киношколу</div>
+          <div class="story-text">Не просто бросил, а ушёл с первой лекции...</div>
+        </article>
+        <article class="story-card dream-two">
+          <div class="veil-shadow"></div>
+          <div class="story-title">Книга, где описан один скучный день...</div>
+          <div class="story-text">Объёмом почти в тысячу страниц...</div>
+        </article>
+        <article class="story-card dream-three">
+          <div class="veil-shadow"></div>
+          <div class="story-title">Картина, которую повторит даже 5-летний...</div>
+          <div class="story-text">Ну действительно, там линия...</div>
+        </article>
+      </div>
+      <a href="#0" class="more-dreams">посмотреть больше</a>
+    </section>
+
+    <section class="story-about">
+      <div class="about-realm">
+        <div class="about-symbol">
+          <img src="./images/logo-white.svg" alt="logo" class="symbol-mark"/>
+        </div>
+        <div class="about-essence">
+          <div class="about-title">ОБ АУКЦИОНЕ</div>
+          <div class="about-texts">
+            <div class="about-paragraph">Здесь вы не встретите очередное пафосное собрание...</div>
+            <div class="about-paragraph">Слишком сложные или, наоборот, слишком простые...</div>
           </div>
         </div>
-        <a href="#0" class="more-dreams">посмотреть больше</a>
-      </section>
+      </div>
+    </section>
 
-      <section class="story-about">
-        <div class="about-realm">
-          <div class="about-symbol">
-            <img src="./images/logo-white.svg" alt="image" class="symbol-mark"/>
-          </div>
-          <div class="about-essence">
-            <div class="about-title">ОБ АУКЦИОНЕ</div>
-            <div class="about-texts">
-              <div class="text-part-one">
-                Здесь вы не встретите очередное пафосное собрание...
-              </div>
-              <div class="text-part-two">
-                Слишком сложные или, наоборот, слишком простые...
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-    </main>
-
-    <footer class="legend-footer">
-      <address>
-        <ul class="contact-soul footer-soul">
-          <li>
-            <a href="tel.+99995555555">+9 999 555 5555</a>
-          </li>
-          <li>
-            <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-          </li>
-          <li class="place-echo">
-            наб. Принсенграхт 263-<br />265, Амстердам
-          </li>
+    <footer class="site-footer">
+      <address class="footer-soul">
+        <ul>
+          <li><a href="tel:+99995555555" class="contact-call">+9 999 555 5555</a></li>
+          <li><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></li>
+          <li class="place-echo">наб. Принсенграхт 263-<br />265, Амстердам</li>
         </ul>
       </address>
-      <nav class="footer-path">
-        <ul class="footer-links">
-          <li class="link-spirit">
-            <a href="#" class="link-spirit main-path"> главная </a>
-          </li>
-          <li class="link-spirit">
-            <a href="#" class="link-spirit"> посмотреть лоты </a>
-          </li>
-          <li class="link-spirit">
-            <a href="#" class="link-spirit"> об аукционе </a>
-          </li>
+      <nav class="footer-nav">
+        <ul class="footer-nav-list">
+          <li class="link-spirit"><a href="#" class="link-spirit footer-link--main">главная</a></li>
+          <li class="link-spirit"><a href="#" class="link-spirit">посмотреть лоты</a></li>
+          <li class="link-spirit"><a href="#" class="link-spirit">об аукционе</a></li>
         </ul>
       </nav>
       <div class="footer-icons">
-        <div><a href="#0"><img src="./images/yt.svg" alt="yt" class="icon-mark"/></a></div>
-        <div><a href="#0"><img src="./images/vk.svg" alt="vk" class="icon-mark"/></a></div>
-        <div><a href="#0"><img src="./images/pinterest.svg" alt="pt" class="icon-mark"/></a></div>
+        <a href="#0"><img src="./images/yt.svg" alt="yt" class="icon-mark"/></a>
+        <a href="#0"><img src="./images/vk.svg" alt="vk" class="icon-mark"/></a>
+        <a href="#0"><img src="./images/pinterest.svg" alt="pinterest" class="icon-mark"/></a>
       </div>
     </footer>
   </body>
