--- a/index.html
+++ b/index.html
@@ -7,107 +7,185 @@
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
   <body>
-    <header class="magic-header">
-      <nav class="nav-bar">
-        <ul class="dream-links">
-          <li class="dream-item moon-marker">
-            <a class="link-path main-path" href="#0">главная</a>
+    <header class="hdr">
+      <nav class="hdr_nav">
+        <ul class="nav_list">
+          <li class="nav_item main_item">
+            <a class="nav_link" href="#0">главная</a>
           </li>
-          <li class="dream-item">
-            <a class="link-path" href="#0">посмотреть лоты</a>
+          <li class="nav_item">
+            <a href="#0">посмотреть лоты</a>
           </li>
-          <li class="dream-item">
-            <a class="link-path" href="#0">об аукционе</a>
+          <li class="nav_item">
+            <a href="#0">об аукционе</a>
           </li>
         </ul>
       </nav>
       <a>
-        <img class="brand-symbol" src="./images/logo-black.svg" alt="logo"/>
+        <img class="hdr_logo" src="./images/logo-black.svg" alt="image"/>
       </a>
       <address>
-        <ul class="contact-soul">
+        <ul class="addr_list">
           <li>
-            <a href="tel:+99995555555" class="contact-call">+9 999 555 5555</a>
+            <a href="tel.+99995555555" class="addr_phone"
+              >+9 999 555 5555</a
+            >
           </li>
           <li>
             <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
           </li>
-          <li class="place-echo">
-            наб. Принсенграхт 263-<br />265, Амстердам
+          <li class="addr_street">
+            наб. Принсенграхт 263-<br />
+            265, Амстердам
           </li>
         </ul>
       </address>
     </header>
-
-    <section class="dream-hero">
-      <div class="veil-shadow"></div>
-      <div class="hero-chant">
-        <span class="hero-word">о<span class="hero-space">нo</span></span>
-        <span class="hero-word word-center">те<span class="hero-space">бе</span></span>
-        <span class="hero-word word-right"><span class="letter-no-space">н</span>адо</span>
-      </div>
-      <div class="hero-vision">
-        <div class="vision-text">Аукцион вещей, в которые никто не верил</div>
-        <button class="wish-button">СДЕЛАТЬ СТАВКУ</button>
-      </div>
-    </section>
-
-    <section class="gallery-section">
-      <div class="gallery-title">Лоты</div>
-      <div class="lot-field">
-        <article class="story-card dream-one">
-          <div class="veil-shadow"></div>
-          <div class="story-title">Фильм режиссёра, который бросил киношколу</div>
-          <div class="story-text">Не просто бросил, а ушёл с первой лекции...</div>
-        </article>
-        <article class="story-card dream-two">
-          <div class="veil-shadow"></div>
-          <div class="story-title">Книга, где описан один скучный день...</div>
-          <div class="story-text">Объёмом почти в тысячу страниц...</div>
-        </article>
-        <article class="story-card dream-three">
-          <div class="veil-shadow"></div>
-          <div class="story-title">Картина, которую повторит даже 5-летний...</div>
-          <div class="story-text">Ну действительно, там линия...</div>
-        </article>
-      </div>
-      <a href="#0" class="more-dreams">посмотреть больше</a>
-    </section>
-
-    <section class="story-about">
-      <div class="about-realm">
-        <div class="about-symbol">
-          <img src="./images/logo-white.svg" alt="logo" class="symbol-mark"/>
+    <main>
+      <section class="cover_sec">
+        <div class="overlay_layer"></div>
+        <div class="cover_heading">
+          <span class="cover_word"> о<span class="letter_spacing">нo</span> </span>
+          <span class="cover_word cover_center">
+            те<span class="letter_spacing">бе</span>
+          </span>
+          <span class="cover_word cover_right">
+            <span class="no_letter_spacing">н</span>адо
+          </span>
         </div>
-        <div class="about-essence">
-          <div class="about-title">ОБ АУКЦИОНЕ</div>
-          <div class="about-texts">
-            <div class="about-paragraph">Здесь вы не встретите очередное пафосное собрание...</div>
-            <div class="about-paragraph">Слишком сложные или, наоборот, слишком простые...</div>
+        <div class="cover_info">
+          <div class="cover_desc">Аукцион вещей, в которые никто не верил</div>
+          <button class="btn">СДЕЛАТЬ СТАВКУ</button>
+        </div>
+      </section>
+      <section class="lots_sec">
+        <div class="lots_title">Лоты</div>
+        <div class="lots_container">
+          <div class="lot_card_wrap">
+            <article class="lot_card lot_card_1">
+              <div class="overlay_layer"></div>
+              <div class="lot_title">
+                Фильм режиссёра, который бросил киношколу
+              </div>
+              <div class="lot_desc">
+                Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
+              </div>
+            </article>
+          </div>
+          <div class="lot_card_wrap">
+            <article class="lot_card lot_card_2">
+              <div class="overlay_layer"></div>
+              <div class="lot_title">
+                Книга, где описан один скучный день из жизни рекламного агента
+              </div>
+              <div class="lot_desc">
+                Объёмом почти в тысячу страниц. Иногда без  знаков препинания и с 
+                переходами на  древнеанглийский. В ней одновременно
+                рассказывается о 16 июня 1904 года и об истории  литературы,
+                начиная с  античных времён. И это  всё накладывается на  эпическую
+                поэму Гомера. Сколько бы вы поставили  на «Улисса» Джеймса 
+                Джойса?
+              </div>
+            </article>
+          </div>
+          <div class="lot_card_wrap">
+            <article class="lot_card lot_card_3">
+              <div class="overlay_layer"></div>
+              <div class="lot_title">
+                Картина, которую повторит даже 5-летний сын маминой подруги
+              </div>
+              <div class="lot_desc">
+                Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                котиков... Сколько бы вы на такое поставили, если бы не знали,
+                что это — одна из революционных работ Кандинского?
+              </div>
+            </article>
           </div>
         </div>
-      </div>
-    </section>
-
-    <footer class="site-footer">
-      <address class="footer-soul">
-        <ul>
-          <li><a href="tel:+99995555555" class="contact-call">+9 999 555 5555</a></li>
-          <li><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></li>
-          <li class="place-echo">наб. Принсенграхт 263-<br />265, Амстердам</li>
+        <a href="#0" class="view_more_link">посмотреть больше</a>
+      </section>
+      <section class="about_sec">
+        <div class="about_wrap">
+          <div class="about_logo_wrap">
+            <img src="./images/logo-white.svg" alt="image" class="about_logo_img"/>
+          </div>
+          <div class="about_content_wrap">
+            <div class="about_title">ОБ АУКЦИОНЕ</div>
+            <div class="about_text_wrap">
+              <div class="about_text_1">
+                Здесь вы не встретите очередное пафосное cобрание невероятно<br />
+                дорогого антиквариата. Наши лоты вообще не должны были
+                попастьни<br />
+                на один аукцион. Потому что кому нужен дневник
+                девочки-подростка<br />
+                или картина, которую может нарисовать даже ребёнок? Кому
+                нужны<br />
+                все эти странные вещи, созданные любителями?
+              </div>
+              <div class="about_text_2">
+                Слишком сложные или, наоборот, слишком простые. Опережающие
+                <br />своё время. В пух и прах растерзанные критиками.
+                Непринятые и<br />
+                непонятые. Когда-то они казались просто неудачными Но,
+                несмотря<br />
+                на критику, кажущуюся простоту или сложность, сейчас без этих<br />
+                лотов невозможно представить современную культуру. Когда в
+                эти<br />
+                вещи не верил никто, продолжали верить их создатели. И сейчас
+                <br />
+                эти лоты стали культовыми.
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="ftr">
+      <address>
+        <ul class="ftr_addr_list">
+          <li>
+            <a href="tel.+99995555555">+9 999 555 5555</a>
+          </li>
+          <li>
+            <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+          </li>
+          <li class="addr_street">
+            наб. Принсенграхт 263-<br />
+            265, Амстердам
+          </li>
         </ul>
       </address>
-      <nav class="footer-nav">
-        <ul class="footer-nav-list">
-          <li class="link-spirit"><a href="#" class="link-spirit footer-link--main">главная</a></li>
-          <li class="link-spirit"><a href="#" class="link-spirit">посмотреть лоты</a></li>
-          <li class="link-spirit"><a href="#" class="link-spirit">об аукционе</a></li>
+      <nav class="ftr_nav">
+        <ul class="ftr_nav_list">
+          <li class="ftr_nav_item">
+            <a href="#" class="ftr_main_link"> главная </a>
+          </li>
+          <li class="ftr_nav_item">
+            <a href="#" class="ftr_nav_item"> посмотреть лоты </a>
+          </li>
+          <li class="ftr_nav_item">
+            <a href="#" class="ftr_nav_item"> об аукционе </a>
+          </li>
         </ul>
       </nav>
-      <div class="footer-icons">
-        <a href="#0"><img src="./images/yt.svg" alt="yt" class="icon-mark"/></a>
-        <a href="#0"><img src="./images/vk.svg" alt="vk" class="icon-mark"/></a>
-        <a href="#0"><img src="./images/pinterest.svg" alt="pinterest" class="icon-mark"/></a>
+      <div class="ftr_icons_wrap">
+        <div>
+          <a href="#0">
+            <img src="./images/yt.svg" alt="image" class="ftr_icon"/>
+          </a>
+        </div>
+        <div>
+          <a href="#0">
+            <img src="./images/vk.svg" alt="image" class="ftr_icon"/>
+          </a>
+        </div>
+        <div>
+          <a href="#0">
+            <img src="./images/pinterest.svg" alt="image" class="ftr_icon"/>
+          </a>
+        </div>
       </div>
     </footer>
   </body>
